# evalyn

./: .env  .gitignore  App.tsx  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  evalyn.sqlite  evalyn.yaml.example  generate_report.py  generate_traces.py  index.html  package-lock.json  package.json  requirements.txt  types.ts
.claude/: settings.local.json
docs/: bugs.md  (+10 more)
sdk/: ONE_CLICK_DESIGN.md  README.md  evalyn.sqlite  evalyn.yaml.example  pyproject.toml  pytest.ini
sdk/data/prod/: traces.sqlite
sdk/docs/: api.md  calibration.md  cli.md  metrics.md
sdk/evalyn_sdk/: __init__.py  analyzer.py  annotations.py  auto_instrument.py  calibration.py  cli.py  cli_impl.py  curation.py  datasets.py  decorators.py  defaults.py  execution.py  judges.py  models.py  otel.py  runner.py  simulation.py  simulator.py  span_annotation.py  suggester.py  tracing.py
sdk/evalyn_sdk/analysis/: __init__.py  clustering.py  core.py  html_report.py  reports.py  trends.py
sdk/evalyn_sdk/annotation/: __init__.py  annotations.py  ape.py  calibration.py  gepa_native.py  opro.py  optimizer_utils.py  span_annotation.py
sdk/evalyn_sdk/batch/: __init__.py  evaluator.py  providers.py
sdk/evalyn_sdk/calibration/: __init__.py  ape.py  basic.py  engine.py  gepa.py  gepa_native.py  models.py  opro.py  utils.py
sdk/evalyn_sdk/cli/: __init__.py  __main__.py  constants.py  main.py
sdk/evalyn_sdk/cli/commands/: __init__.py  analysis.py  annotation.py  calibration.py  clustering.py  completion.py  dataset.py  evaluation.py  export.py  infrastructure.py  runs.py  simulate.py  traces.py
sdk/evalyn_sdk/cli/utils/: __init__.py  config.py  dataset_resolver.py  dataset_utils.py  errors.py  formatters.py  hints.py  input_helpers.py  llm_callers.py  loaders.py  pipeline.py  pipeline_steps.py  ui.py  validation.py
sdk/evalyn_sdk/confidence/: __init__.py  base.py  logprobs.py  verbalized.py
sdk/evalyn_sdk/eval_units/: __init__.py  builders.py  views.py
sdk/evalyn_sdk/evaluation/: __init__.py  execution.py  runner.py
sdk/evalyn_sdk/evaluation/batch/: __init__.py  evaluator.py  providers.py
sdk/evalyn_sdk/evaluation/units/: builders.py  views.py
sdk/evalyn_sdk/judges/: __init__.py  llm_judge.py
sdk/evalyn_sdk/judges/confidence/: __init__.py  base.py  consistency.py  logprobs.py
sdk/evalyn_sdk/metrics/: __init__.py  factory.py  judges.py  objective.py  registry.py  subjective.py  suggester.py  templates.py
sdk/evalyn_sdk/simulation/: __init__.py  simulation.py  simulator.py
sdk/evalyn_sdk/storage/: __init__.py  base.py  sqlite.py
sdk/evalyn_sdk/trace/: __init__.py  auto_instrument.py  context.py  langgraph.py  otel.py  tracer.py
sdk/evalyn_sdk/trace/instrumentation/: __init__.py  base.py  conventions.py  registry.py  span_converter.py  span_processor.py
sdk/evalyn_sdk/utils/: __init__.py  api_client.py
sdk/examples/: agent.py  dataset.jsonl
sdk/tests/: test_storage_and_cli_units.py  test_tracing_runner.py
(+78 files in other folders)
