[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evalyn-sdk"
version = "0.0.1"
description = "Auto-evaluation toolkit for instrumenting LLM agents, collecting traces, and running metrics."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{ name = "Evalyn", email = "dev@evalyn.local" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23"
]

[project.scripts]
evalyn = "evalyn_sdk.cli:main"

[tool.setuptools.packages.find]
include = ["evalyn_sdk*"]
